--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -60,10 +60,28 @@
       }
     },
     {
+      "description": ["CoreDNS Group"],
+      "groupName": "CoreDNS",
+      "matchDatasources": ["docker"],
+      "matchPackagePatterns": ["/coredns/"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      }
+    },
+    {
       "description": ["Flux Operator Group"],
       "groupName": "Flux Operator",
       "matchDatasources": ["docker"],
       "matchPackagePatterns": ["flux-operator", "flux-instance"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      }
+    },
+    {
+      "description": ["Spegel Group"],
+      "groupName": "Spegel",
+      "matchDatasources": ["docker"],
+      "matchPackagePatterns": ["/spegel/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
