--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/app/helmrepository.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/app/helmrepository.yaml
@@ -4,8 +4,8 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: actions-runner-controller
-  namespace: flux-system
+  namespace: actions-runner-system # Required for Renovate lookups
 spec:
+  interval: 1h
   type: oci
-  interval: 30m
   url: oci://ghcr.io/actions/actions-runner-controller-charts
