--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: observability
 components:
   - ../../components/common
+  - ../../components/repos/app-template
 resources:
   - ./gatus/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
