--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -1,8 +1,12 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.7.0/charts/library/common/values.schema.json
-envFrom:
-  - secretRef:
-      name: flame-secret
+controllers:
+  main:
+    enabled: true
+    defaultContainerOptions:
+      envFrom:
+        - secretRef:
+            name: flame-secret
 ingress:
   main:
     enabled: true
