--- a/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
@@ -3,10 +3,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./clusterissuers.yaml
   - ./helmrelease.yaml
   - ./helmrepository.yaml
+  - ./prometheusrule.yaml
   - ./secret.sops.yaml
-  - ./clusterissuers.yaml
 configMapGenerator:
   - name: cert-manager-values
     files:
