--- a/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
@@ -3,11 +3,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./helmrepository.yaml
-  - ./ingress.yaml
+  - ./httproute.yaml
+  - ./prometheusrule.yaml
   - ./receiver.yaml
-  - ./secret.sops.yaml
 configMapGenerator:
   - name: flux-instance-values
     files:
