--- a/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./clusterissuers.yaml
+  - ./clusterissuer.yaml
   - ./helmrelease.yaml
   - ./helmrepository.yaml
   - ./prometheusrule.yaml
