--- a/kubernetes/apps/default/webhook/app/helmrelease.yaml
+++ b/kubernetes/apps/default/webhook/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app radarr
+  name: &app webhook
 spec:
   interval: 1h
   chartRef:
@@ -11,57 +11,39 @@ spec:
     name: app-template
   install:
     remediation:
-      retries: 3
+      retries: -1
   upgrade:
     cleanupOnFail: true
     remediation:
       retries: 3
   values:
     controllers:
-      radarr:
+      webhook:
+        replicas: 2
+        strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
-              repository: ghcr.io/home-operations/radarr
-              tag: 5.22.0.9808@sha256:2bf6a9a5f30b28f09fa5601b23d095c64739ab0667753b95493a1bcdf194057d
+              repository: ghcr.io/home-operations/webhook
+              tag: 2.8.2@sha256:052e3d82aa13091459faa75550943faf06309c0ca71253ea1cece7880b1d5faa
             env:
-              RADARR__APP__INSTANCENAME: Radarr
-              RADARR__APP__THEME: dark
-              RADARR__AUTH__METHOD: External
-              RADARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              RADARR__LOG__DBENABLED: "False"
-              RADARR__LOG__LEVEL: info
-              RADARR__SERVER__PORT: &port 7878
-              RADARR__UPDATE__BRANCH: develop
+              SONARR_URL: http://sonarr.servarr.svc.cluster.local
+              WEBHOOK__PORT: &port 80
               TZ: America/Los_Angeles
             envFrom:
               - secretRef:
-                  name: radarr-secret
-            probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /ping
-                    port: *port
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
+                  name: webhook-secret
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                cpu: 20m
-                memory: 384Mi
+                cpu: 100m
               limits:
-                memory: 2Gi
+                memory: 256Mi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -71,7 +53,7 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
-        controller: radarr
+        controller: webhook
         ports:
           http:
             port: *port
@@ -88,16 +70,8 @@ spec:
                 port: *port
     persistence:
       config:
-        existingClaim: radarr
-      config-cache:
-        existingClaim: radarr-cache
+        type: configMap
+        name: webhook-configmap
+        defaultMode: 0775
         globalMounts:
-          - path: /config/MediaCover
-      media:
-        type: nfs
-        server: 100.68.189.69  # helios64.shark-tone.ts.net
-        path: /export/Glacier02/Media
-        globalMounts:
-          - path: /data/nas-media
-      tmp:
-        type: emptyDir
+          - readOnly: true
