--- a/kubernetes/apps/default/webhook/app/resources/hooks.yaml
+++ b/kubernetes/apps/default/webhook/app/resources/hooks.yaml
@@ -1,12 +1,4 @@
 ---
-- id: cross-seed-pushover
-  execute-command: /config/cross-seed-pushover.sh
-  command-working-directory: /config
-  pass-arguments-to-command:
-    - source: string
-      name: '{{ getenv "CROSS_SEED_PUSHOVER_URL" }}'
-    - source: entire-payload
-
 - id: radarr-pushover
   execute-command: /config/radarr-pushover.sh
   command-working-directory: /config
@@ -27,8 +19,8 @@
   execute-command: /config/sonarr-refresh-series.sh
   command-working-directory: /config
   pass-arguments-to-command:
-    - source: string
-      name: '{{ getenv "SONARR_URL" }}'
+    - source: request
+      name: remote-addr
     - source: string
       name: '{{ getenv "SONARR_API_KEY" }}'
     - source: entire-payload
@@ -37,8 +29,8 @@
   execute-command: /config/sonarr-tag-codecs.sh
   command-working-directory: /config
   pass-arguments-to-command:
-    - source: string
-      name: '{{ getenv "SONARR_URL" }}'
+    - source: request
+      name: remote-addr
     - source: string
       name: '{{ getenv "SONARR_API_KEY" }}'
     - source: entire-payload
