--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -25,37 +25,17 @@ spec:
             includeSingleEpisodes: true,
             linkCategory: "cross-seed",
             linkDirs: [
-              "/data/nas-media/Downloads/qbittorrent/complete/cross-seed"
+              "/media/Downloads/qbittorrent/complete/cross-seed"
             ],
             linkType: "hardlink",
             matchMode: "strict",
-            notificationWebhookUrls: [
-              "http://webhook.default.svc.cluster.local/hooks/cross-seed-pushover"
-            ],
             outputDir: null,
             port: Number(process.env.CROSS_SEED_PORT),
-            qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local:8080",
-            radarr: [
-              "http://radarr.servarr.svc.cluster.local:7878/?apikey={{ .RADARR_API_KEY }}"
-            ],
+            qbittorrentUrl: "http://qbittorrent.default.svc.cluster.local",
             skipRecheck: true,
-            sonarr: [
-              "http://sonarr.servarr.svc.cluster.local:8989/?apikey={{ .SONARR_API_KEY }}"
-            ],
             torznab: [],
-            // torznab: [
-            //     88, // HUNO
-            //     89, // OTW
-            //     90, // FNP
-            // ].map(i => `http://prowlarr.servarr.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
             useClientTorrents: true
           };
   dataFrom:
     - extract:
         key: cross-seed
-    - extract:
-        key: radarr
-    - extract:
-        key: sonarr
-    - extract:
-        key: prowlarr
