--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -18,9 +18,6 @@ spec:
             action: "inject",
             apiKey: "{{.CROSS_SEED_API_KEY}}",
             delay: 30,
-            duplicateCategories: false,
-            flatLinking: false,
-            includeEpisodes: true,
             includeNonVideos: true,
             includeSingleEpisodes: true,
             linkCategory: "cross-seed",
@@ -28,7 +25,7 @@ spec:
               "/data/nas-media/Downloads/qbittorrent/complete/cross-seed"
             ],
             linkType: "hardlink",
-            matchMode: "strict",
+            matchMode: "partial",
             outputDir: null,
             port: Number(process.env.CROSS_SEED_PORT),
             qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local:8080",
