--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -18,18 +18,18 @@ spec:
       retries: 3
   values:
     controllers:
-      plex:
+      jellyfin:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
-              repository: ghcr.io/home-operations/plex
-              tag: 1.41.6.9685@sha256:37d36646471fb905a0080daaaa1f09ad3370b06149ed5f94dad73ead591cad0e
+              repository: ghcr.io/jellyfin/jellyfin
+              tag: 10.10.7.20250405-191553@sha256:e4d1dc5374344446a3a78e43dd211247f22afba84ea2e5a13cbe1a94e1ff2141
             env:
               TZ: America/Los_Angeles
-              PLEX_ADVERTISE_URL: https://jellyfin.igloo.sh:443,http://192.168.42.128:32400
-              PLEX_NO_AUTH_NETWORKS: 192.168.10.0/24
+              JELLYFIN_PublishedServerUrl: https://{{ .Release.Name }}.igloo.sh
+              DOTNET_SYSTEM_IO_DISABLEFILELOCKING: "true"
             probes:
               liveness: &probes
                 enabled: true
@@ -37,7 +37,7 @@ spec:
                 spec:
                   httpGet:
                     path: /identity
-                    port: &port 32400
+                    port: &port 8096
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -55,9 +55,13 @@ spec:
             resources:
               requests:
                 cpu: 100m
+                memory: 4Gi
               limits:
                 memory: 8Gi
     defaultPodOptions:
+      nodeSelector:
+        # extensions.talos.dev/amdgpu: 20250211-v1.9.5
+        kubernetes.io/hostname: mbp-node-02
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
@@ -67,13 +71,13 @@ spec:
         supplementalGroups: [44, 109]
     service:
       app:
-        controller: plex
+        controller: jellyfin
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 192.168.42.128
+          lbipam.cilium.io/ips: 192.168.20.13
         ports:
           http:
-            port: 32400
+            port: 8096
     route:
       app:
         hostnames:
@@ -86,28 +90,13 @@ spec:
           - backendRefs:
               - name: *app
                 port: *port
-            filters:
-              - type: RequestHeaderModifier
-                requestHeaderModifier:
-                  remove: ["Range"]
-            matches:
-              - path:
-                  type: PathPrefix
-                  value: /library/streams
-          - backendRefs:
-              - name: *app
-                port: *port
     persistence:
       config:
         existingClaim: jellyfin
       config-cache:
         existingClaim: jellyfin-cache
-        globalMounts:
-          - path: /config/Library/Application Support/Jellyfin/Cache
       config-logs:
         type: emptyDir
-        globalMounts:
-          - path: /config/Library/Application Support/Jellyfin/Logs
       transcode:
         type: emptyDir
       media:
