--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -80,10 +80,12 @@ spec:
           limits:
             memory: 256Mi
       storage:
-        useAllNodes: true
+        useAllNodes: false
         useAllDevices: false
-        deviceFilter: nvme0n1
-        # devicePathFilter: /dev/disk/by-id/nvme-Micron_7450_MTFDKBA800TFS_.*
+        nodes:
+          - name: mba-node-01
+            devices:
+              - name: /dev/sda  # external HD, usb transport
         config:
           osdsPerDevice: "1"
     cephBlockPools:
