--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -83,7 +83,7 @@ spec:
         useAllNodes: false
         useAllDevices: false
         nodes:
-          - name: mba-node-01
+          - name: dell-node-01
             devices:
               - name: sda  # external HD, usb transport
         config:
