--- a/kubernetes/components/common/kustomization.yaml
+++ b/kubernetes/components/common/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
   - ./alerts
+  - ./repos
   - ./cluster-secrets.sops.yaml
   - ./namespace.yaml
   - ./sops-age.sops.yaml
