--- a/kubernetes/components/volsync/kustomization.yaml
+++ b/kubernetes/components/volsync/kustomization.yaml
@@ -3,8 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
-  - ./alerts
-  - ./repos
-  - ./cluster-secrets.sops.yaml
-  - ./namespace.yaml
-  - ./sops-age.sops.yaml
+  - ./local
+  - ./remote
+  - ./pvc.yaml
