--- a/kubernetes/apps/default/readeck/ks.yaml
+++ b/kubernetes/apps/default/readeck/ks.yaml
@@ -20,6 +20,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      GATUS_SUBDOMAIN: read
       VOLSYNC_CAPACITY: 2Gi
     substituteFrom:
       - name: cluster-secrets
