--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -13,56 +13,49 @@ repositories:
 releases:
   - name: cilium
     namespace: kube-system
-    atomic: true
     chart: cilium/cilium
     version: 1.17.3
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/cilium/app/helm/values.yaml']
+    values: ['../kubernetes/apps/kube-system/cilium/app/helm/values.yaml']
 
   - name: coredns
     namespace: kube-system
-    atomic: true
     chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.41.0
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/coredns/app/helm/values.yaml']
+    values: ['../kubernetes/apps/kube-system/coredns/app/helm/values.yaml']
     needs: ['kube-system/cilium']
 
   - name: spegel
     namespace: kube-system
-    atomic: true
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: 0.2.0
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/spegel/app/helm/values.yaml']
+    values: ['../kubernetes/apps/kube-system/spegel/app/helm/values.yaml']
     needs: ['kube-system/coredns']
 
   - name: cert-manager
     namespace: cert-manager
-    atomic: true
     chart: oci://quay.io/jetstack/charts/cert-manager
     version: v1.17.2
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/cert-manager/cert-manager/app/helm/values.yaml']
+    values: ['../kubernetes/apps/cert-manager/cert-manager/app/helm/values.yaml']
     needs: ['kube-system/spegel']
 
   - name: external-secrets
     namespace: external-secrets
-    atomic: true
     chart: oci://ghcr.io/external-secrets/charts/external-secrets
     version: 0.16.1
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/external-secrets/external-secrets/app/helm/values.yaml']
+    values: ['../kubernetes/apps/external-secrets/external-secrets/app/helm/values.yaml']
     needs: ['cert-manager/cert-manager']
 
   - name: flux-operator
     namespace: flux-system
-    atomic: true
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.19.0
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/app/helm/values.yaml']
+    values: ['../kubernetes/apps/flux-system/flux-operator/app/helm/values.yaml']
     needs: ['external-secrets/external-secrets']
 
   - name: flux-instance
     namespace: flux-system
-    atomic: true
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.19.0
     wait: false
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/instance/helm/values.yaml']
+    values: ['../kubernetes/apps/flux-system/flux-operator/instance/helm/values.yaml']
     needs: ['flux-system/flux-operator']
